--- a/PdfToJwwConverter/MainWindow.xaml
+++ b/PdfToJwwConverter/MainWindow.xaml
@@ -1,19 +1,22 @@
-﻿<Window x:Class="PdfToJwwConverter.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PdfToJwwConverter"
-        mc:Ignorable="d"
-        Title="PDF to JWW Converter" 
-        SizeToContent="WidthAndHeight"
-        AllowDrop="True"
-        Drop="Window_Drop"
-        PreviewDragOver="Window_PreviewDragOver"
-        
-        >
+﻿<Window
+    x:Class="PdfToJwwConverter.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:PdfToJwwConverter"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="PDF to JWW Converter"
+    AllowDrop="True"
+    Drop="Window_Drop"
+    PreviewDragOver="Window_PreviewDragOver"
+    Closing="Window_Closing"
+    Loaded="Window_Loaded"
+    SizeToContent="WidthAndHeight"
+    
+    mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
@@ -23,58 +26,100 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Label Content="PDF" Grid.Row="0" Grid.Column="0" Margin="4" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1" >
-            <TextBox x:Name="Part_PdfFile" Margin="4" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalContentAlignment="Center" Width="400"
-                     IsReadOnly="true"
-                     />
-            <Button x:Name="Part_OpenPDF" Content="..." Width="32" Margin="4"
-                    Click="Part_OpenPDF_Click"
-                    />   
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Margin="4"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="PDF" />
+        <StackPanel
+            Grid.Row="0"
+            Grid.Column="1"
+            Margin="8"
+            Orientation="Horizontal">
+            <TextBox
+                x:Name="Part_PdfFile"
+                Width="400"
+                Margin="4"
+                HorizontalAlignment="Left"
+                VerticalContentAlignment="Center"
+                IsReadOnly="true"
+                TextWrapping="Wrap" />
+            <Button
+                x:Name="Part_OpenPDF"
+                Width="32"
+                Margin="4"
+                Click="Part_OpenPDF_Click"
+                Content="..." />
         </StackPanel>
         <Label
-            Margin="4"
             Grid.Row="1"
             Grid.Column="0"
+            Margin="4"
             VerticalAlignment="Center"
             Content="Page" />
         <StackPanel
             Grid.Row="1"
             Grid.Column="1"
             Margin="4"
-            Orientation="Horizontal"
-            >
-        <TextBox
-            x:Name="Part_PageNumber"
-            Margin="4"
-            VerticalAlignment="Center"
-            HorizontalAlignment="Left"
-            MinWidth="100"
-            Text="1"
-            />
-            <TextBlock
-            Margin="4"
-                x:Name="Part_PageRange"
-                />
+            Orientation="Horizontal">
+            <TextBox
+                x:Name="Part_PageNumber"
+                MinWidth="100"
+                Margin="4"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                Text="1" />
+            <TextBlock x:Name="Part_PageRange" Margin="4" />
         </StackPanel>
-        <Label
-            Margin="4"
+        <GroupBox
             Grid.Row="2"
             Grid.Column="0"
-            VerticalAlignment="Center"
-            Content="Option" />
+            Grid.ColumnSpan="2"
+            Margin="16"
+            Header="Options">
 
-        <CheckBox 
-            x:Name="Part_CombineText"
-            Content="Combine text"
-                  Margin="4"
-                  Grid.Row="2"
-                  Grid.Column="1"
+
+
+            <StackPanel Orientation="Vertical">
+                <CheckBox
+                    x:Name="Part_CombineText"
+                    Margin="4"
+                    VerticalAlignment="Center"
+                    Content="Combine text"
+                    IsChecked="{Binding EnableCombineText}" />
+                <CheckBox
+                    x:Name="Part_UnifyKanji"
+                    Margin="4"
+                    VerticalAlignment="Center"
+                    Content="Unify kanji(for Japanese)"
+                    IsChecked="{Binding EnableUnifyKanji}" />
+                <CheckBox
+                    x:Name="Part_Overwrite"
+                    Margin="4"
+                    VerticalAlignment="Center"
+                    Content="Overwrite"
+                    IsChecked="{Binding EnableOverwrite}" />
+
+            </StackPanel>
+        </GroupBox>
+
+        <Button
+            x:Name="Part_Convert"
+            Grid.Row="3"
+            Grid.Column="1"
+            Width="70"
+            Margin="8"
+            HorizontalAlignment="Right"
             VerticalAlignment="Center"
-            IsChecked="{Binding EnableCombineText}"
-                  />
-        <StackPanel
+            Click="Button_Click"
+            Content="CONVERT"
+            IsDefault="True" />
+
+        <!--<StackPanel
             Grid.Row="4"
             Grid.ColumnSpan="2"
             Margin="10"
@@ -90,7 +135,7 @@
                 Click="Button_Click"
                 Content="CONVERT"
                 IsDefault="True" />
-        </StackPanel>
+        </StackPanel>-->
 
 
     </Grid>
