--- a/PdfToJwwConverter/MainWindow.xaml
+++ b/PdfToJwwConverter/MainWindow.xaml
@@ -15,17 +15,15 @@
     SizeToContent="WidthAndHeight"
     mc:Ignorable="d">
 
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
+        <Grid Grid.Row="0" Margin="8">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="150.637" />
-                <ColumnDefinition Width="313.363"/>
+                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -38,15 +36,15 @@
             </Grid.RowDefinitions>
             <Label
                 Grid.Column="0"
-                Margin="4,0,0,0"
+                Margin="4"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
                 Content="PDF" />
             <StackPanel
                 Grid.Row="0"
                 Grid.Column="1"
-                Margin="8,8,8,8"
-                Orientation="Horizontal" Grid.ColumnSpan="2">
+                Grid.ColumnSpan="2"
+                Orientation="Horizontal">
                 <TextBox
                     x:Name="Part_PdfFile"
                     Width="400"
@@ -65,12 +63,15 @@
             <Label
                 Grid.Row="1"
                 Grid.Column="0"
-                Margin="4,0,4,0"
+                Height="26"
+                Margin="4"
                 VerticalAlignment="Center"
                 Content="{x:Static properties:Resources.Page}" />
             <StackPanel
                 Grid.Row="1"
-                Orientation="Horizontal" Grid.ColumnSpan="3" Margin="45,0,0,34" Grid.RowSpan="2">
+                Grid.Column="1"
+                Grid.ColumnSpan="3"
+                Orientation="Horizontal">
                 <TextBox
                     x:Name="Part_PageNumber"
                     MinWidth="60"
@@ -79,28 +80,48 @@
                     VerticalAlignment="Center"
                     Text="1"
                     ToolTip="{x:Static properties:Resources.PageNumberExplanation}" />
-                <TextBlock x:Name="Part_PageRange" Margin="4" />
+                <TextBlock
+                    x:Name="Part_PageRange"
+                    Margin="4"
+                    VerticalAlignment="Center" />
             </StackPanel>
             <Label
                 Grid.Row="2"
                 Grid.Column="0"
+                Height="26"
+                Margin="4"
+                VerticalAlignment="Center"
+                Content="{x:Static properties:Resources.Paper}" />
+            <ComboBox
+                x:Name="Part_Paper"
+                Grid.Row="2"
+                Grid.Column="1"
+                MinWidth="200"
+                Margin="4"
+                HorizontalAlignment="Left"
+                ItemsSource="{Binding PaperList}"
+                SelectedItem="{Binding Paper}" />
+
+            <Label
+                Grid.Row="3"
+                Grid.Column="0"
+                Height="26"
                 Margin="4,0,4,0"
                 VerticalAlignment="Center"
                 Content="{x:Static properties:Resources.Scale}" />
             <ComboBox
                 x:Name="Part_Scale"
-                Grid.Row="2"
+                Grid.Row="3"
                 Grid.Column="1"
+                MinWidth="60"
                 Margin="4,4,0,4"
                 HorizontalAlignment="Left"
-                MinWidth="60"
                 ItemsSource="{Binding ScaleList}"
-                SelectedItem="{Binding Scale}"
-                />
+                SelectedItem="{Binding Scale}" />
 
 
             <GroupBox
-                Grid.Row="3"
+                Grid.Row="4"
                 Grid.Column="0"
                 Grid.ColumnSpan="3"
                 Margin="16,16,16,16"
@@ -133,15 +154,29 @@
 
             <Button
                 x:Name="Part_Convert"
-                Grid.Row="4"
-                Grid.Column="2"
+                Grid.Row="5"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
                 Width="70"
-                Margin="235,0,0,0"
+                Height="20"
+                Margin="8"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
                 Click="Button_Click"
                 Content="{x:Static properties:Resources.Convert}"
                 IsDefault="True" />
+            <TextBlock
+                Grid.Row="5"
+                Grid.Column="2"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center">
+                <Hyperlink
+                    Cursor="Hand"
+                    NavigateUri="https://junkbulk.com"
+                    RequestNavigate="Hyperlink_RequestNavigate">
+                    junkbulk.com
+                </Hyperlink>
+            </TextBlock>
 
             <!--<StackPanel
             Grid.Row="4"
@@ -164,13 +199,51 @@
 
         </Grid>
         <Rectangle
-            Grid.Row="0"
             x:Name="Part_WaitingOverlay"
+            Grid.Row="0"
             Fill="Black"
             Opacity="0.05"
             Visibility="Collapsed" />
 
-        <Grid Grid.Row="1">
+        <StatusBar
+            Name="Part_StatusBar"
+            Grid.Row="1"
+            VerticalAlignment="Bottom">
+
+            <StatusBarItem DockPanel.Dock="Right">
+                <ResizeGrip DockPanel.Dock="Right" Visibility="Hidden" />
+            </StatusBarItem>
+            <StatusBarItem DockPanel.Dock="Right">
+
+                <Button
+                    x:Name="Part_Cancel"
+                    VerticalAlignment="Center"
+                    Click="Part_Cancel_Click"
+                    Content="Cancel"
+                    Visibility="Hidden" />
+            </StatusBarItem>
+            <!--  Status message  -->
+            <StatusBarItem DockPanel.Dock="Left">
+                <ProgressBar
+                    x:Name="Part_Progress"
+                    Width="100"
+                    Height="12"
+                    Margin="4"
+                    VerticalAlignment="Center"
+                    IsIndeterminate="True"
+                    Maximum="100"
+                    Minimum="0"
+                    Visibility="Collapsed" />
+            </StatusBarItem>
+            <StatusBarItem DockPanel.Dock="Left">
+                <TextBlock x:Name="Part_Message" VerticalAlignment="Center" />
+            </StatusBarItem>
+
+        </StatusBar>
+
+
+
+        <!--<Grid Grid.Row="1" Margin="8">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
@@ -200,6 +273,6 @@
                 Click="Part_Cancel_Click"
                 Content="Cancel"
                 Visibility="Hidden" />
-        </Grid>
+        </Grid>-->
     </Grid>
 </Window>
